second seciton iphone fix

--- a/css/site.scss
+++ b/css/site.scss
@@ -238,6 +238,7 @@ html, body {
 					}
 					@include bp-medium {
 						height: 100%;
+						min-height:500px;
 						width: 100%;
 						right: 0!important;
 						top: 700px;
@@ -245,6 +246,7 @@ html, body {
 					}
 					@include bp-small {
 						height: 100%;
+						min-height:500px;
 						width: 100%;
 						right: 0!important;
 						top: 500px;
